--- a/dynamic-form-2-il-ritorno/package.json
+++ b/dynamic-form-2-il-ritorno/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js"
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "del" : "node src/utils/rimozionedimassa.js"
   },
   "author": "",
   "license": "ISC",
