--- a/dynamic-form-2-il-ritorno/package.json
+++ b/dynamic-form-2-il-ritorno/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "del" : "node src/utils/rimozionedimassa.js"
+    "del" : "node src/utils/rimozionedimassa.js",
+    "delMY" : "node src/utils/rimozione-filtrata.js"
   },
   "author": "",
   "license": "ISC",
