--- a/dynamic-form-2-il-ritorno/package.json
+++ b/dynamic-form-2-il-ritorno/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
-    "del" : "node src/utils/rimozionedimassa.js",
-    "delMY" : "node src/utils/rimozione-filtrata.js",
-    "delName" : "node src/utils/rimozione-per-nome.js"
+    "del": "node src/utils/rimozionedimassa.js",
+    "delMY": "node src/utils/rimozione-filtrata.js",
+    "delName": "node src/utils/rimozione-per-nome.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.21.2",
     "hbs": "^4.2.0",
+    "highlight.js": "^11.11.1",
     "path": "^0.12.7"
   }
 }
